[project]
name = "d4rt"
version = "0.0.16"
description = "Implementation of D4RT, Efficiently Reconstructing Dynamic Scenes"
authors = [
    { name = "Phil Wang", email = "lucidrains@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.10"
license = { file = "LICENSE" }
keywords = [
    'artificial intelligence',
    'deep learning',
    '4d'
]

classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.10',
]

dependencies = [
    "einx>=0.4.3",
    "einops>=0.8.1",
    "torch>=2.5",
    "torch-einops-utils>=0.0.32",
    "x-transformers>=2.20.0",
    "x-mlp-pytorch"
]

[project.urls]
Homepage = "https://pypi.org/project/d4rt/"
Repository = "https://codeberg.org/lucidrains/d4rt"

[project.optional-dependencies]
examples = []
test = [
    "pytest"
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = [
    "d4rt",
    "pyproject.toml",
    "README.md",
    "LICENSE"
]

[tool.hatch.build.targets.wheel]
packages = ["d4rt"]
